update - memoria, comprobador-col, tests en trans

--- a/Análisis_y_transformación_datos/Comparador-columnas.ipynb
+++ b/Análisis_y_transformación_datos/Comparador-columnas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d698efc1",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "7eed267c",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "b067cff0",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "b6418897",
    "metadata": {},
    "outputs": [
@@ -74,49 +74,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valores únicos en archivo original: 6\n",
+      "Valores únicos en archivo original: 4\n",
       "Número de registros: 1678\n",
-      "Registros duplicados: 1672\n",
+      "Registros duplicados: 1674\n",
       "----------------\n",
       "\n",
       "Porcentajes:\n",
-      "educationfield\n",
-      "NaN                 46.13\n",
-      "Life Sciences       21.87\n",
-      "Medical             17.04\n",
-      "Marketing            6.32\n",
-      "Technical Degree     4.17\n",
-      "Other                3.75\n",
-      "Human Resources      0.72\n",
+      "worklifebalance\n",
+      "3,0    56.38\n",
+      "2,0    22.29\n",
+      "4,0     9.65\n",
+      "NaN     6.79\n",
+      "1,0     4.89\n",
       "Name: proportion, dtype: float64\n",
       "\n",
       "-----<------<-------<---@\n",
       "\n",
-      "Valores únicos en archivo transformado: 6\n",
+      "Valores únicos en archivo transformado: 4\n",
       "Número de registros:1614\n",
-      "Registros duplicados: 1608\n",
+      "Registros duplicados: 1610\n",
       "----------------\n",
       "\n",
       "Porcentajes:\n",
-      "educationfield\n",
-      "NaN                 46.16\n",
-      "life sciences       21.62\n",
-      "medical             17.10\n",
-      "marketing            6.44\n",
-      "technical degree     4.28\n",
-      "other                3.66\n",
-      "human resources      0.74\n",
-      "Name: proportion, dtype: float64\n"
+      "worklifebalance\n",
+      "3.0    63.26\n",
+      "2.0    22.24\n",
+      "4.0     9.60\n",
+      "1.0     4.89\n",
+      "Name: proportion, dtype: float64\n",
+      "📊 Estadísticas de WorkLifeBalance\n",
+      "---------------------------------\n",
+      "Media : 2.78\n",
+      "Mediana : 3.00\n",
+      "Moda : 3.0\n"
      ]
     }
    ],
    "source": [
     "# USO:\n",
     "\n",
-    "rawdata(df, \"educationfield\")\n",
+    "rawdata(df, \"worklifebalance\")\n",
     "print('\\n-----<------<-------<---@\\n')\n",
-    "cambios(dftrans, \"educationfield\")"
+    "cambios(dftrans, \"worklifebalance\")\n",
+    "# Se anade calculo de media, mediana, mode - util para imputaciones.\n",
+    "stats = dftrans[\"worklifebalance\"].agg({\n",
+    "    'Mean': 'mean',\n",
+    "    'Median': 'median',\n",
+    "    'Mode': lambda x: x.mode().iloc[0]\n",
+    "})\n",
+    "\n",
+    "print(\"📊 Estadísticas de WorkLifeBalance\")\n",
+    "print(\"---------------------------------\")\n",
+    "print(f\"Media : {stats['Mean']:.2f}\")\n",
+    "print(f\"Mediana : {stats['Median']:.2f}\")\n",
+    "print(f\"Moda : {stats['Mode']}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3a0057f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -135,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
