--- a/Análisis_y_transformación_datos/Transformación_1.0.ipynb
+++ b/Análisis_y_transformación_datos/Transformación_1.0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "id": "81526617",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "id": "9cad08e1",
    "metadata": {},
    "outputs": [],
@@ -1671,27 +1671,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "id": "6d7447b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"environmentsatisfaction\"] = ((df[\"environmentsatisfaction\"] + 5) // 10).astype(int)\n"
+    "df[\"environmentsatisfaction\"] = df[\"environmentsatisfaction\"].apply(lambda x: ((x + 5) // 10) if x > 4 else x).astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "96121f16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 4, 3, 2, 1, 5])"
+       "array([1, 3, 4, 2, 5])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1699,6 +1699,49 @@
    "source": [
     "df[\"environmentsatisfaction\"].unique()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "cbd478c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "environmentsatisfaction\n",
+       "4    30.274136\n",
+       "3    28.843862\n",
+       "2    20.262217\n",
+       "1    19.606675\n",
+       "5     1.013111\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"environmentsatisfaction\"].value_counts(normalize=True)*100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd2fed57",
+   "metadata": {},
+   "source": [
+    "**REPLACE ``remotework`` para imputar Yes/No**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29a6d24f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
