--- a/EDA-primera-ronda.ipynb
+++ b/EDA-primera-ronda.ipynb
@@ -2,22 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bff9ec5a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n"
+    "# Tratamiento de datos\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cf63df32",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"raw_data_limpio_2.csv\", index_col= 0) ## de cara a la exportación para no duplicar el index fantasma"
+    "df = pd.read_csv(\"files/raw_data_limpio.csv\", index_col= 0) ## de cara a la exportación para no duplicar el index fantasma"
    ]
   },
   {
@@ -4406,7 +4409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
