--- a/Transformación.ipynb
+++ b/Transformación.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "81526617",
    "metadata": {},
    "outputs": [],
@@ -33,12 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9cad08e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"raw_data.csv\", index_col=0) "
+    "df = pd.read_csv(\"files/raw_data.csv\", index_col=0) "
    ]
   },
   {
@@ -2285,12 +2285,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "514d76f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"raw_data_limpio_2.csv\", index=False)"
+    "df.to_csv(\"files/raw_data_limpio.csv\", index=False)"
    ]
   },
   {
@@ -2319,7 +2319,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2333,7 +2333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
