--- a/EDA-tercera-y-última.ipynb
+++ b/EDA-tercera-y-última.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b1ed29ba",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "40c9a0ce",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "af5a3859",
    "metadata": {},
    "outputs": [
@@ -57,36 +57,220 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|    dtype: object  |   age   |\n",
+      "|    dtype: int64  |   environmentsatisfaction   |\n",
       "|-----------|---------------|\n",
-      "||**Top 5:**\n",
-      "||35  5.24%\n",
-      "||31  5.24%\n",
-      "||34  5.13%\n",
-      "||29  4.89%\n",
-      "||36  4.71%\n",
-      "||**Bottom 5:**\n",
-      "||thirty-one  0.06%\n",
-      "||thirty  0.06%\n",
-      "||fifty-five  0.06%\n",
-      "||twenty-six  0.06%\n",
-      "||thirty-seven  0.06%\n",
       "||\n",
-      "||**Media:** 36.94774774774775\n",
-      "||**Mediana:** 36.0\n",
-      "||**Moda:** 31.0\n",
-      "||\n",
-      "||Valores únicos: **54**\n",
+      "||4  28.78\n",
+      "||3  28.07\n",
+      "||2  18.83\n",
+      "||1  18.24\n",
+      "||12  0.42\n",
+      "||35  0.42\n",
+      "||13  0.36\n",
+      "||14  0.36\n",
+      "||47  0.3\n",
+      "||24  0.3\n",
+      "||41  0.24\n",
+      "||42  0.24\n",
+      "||46  0.24\n",
+      "||36  0.24\n",
+      "||48  0.24\n",
+      "||20  0.18\n",
+      "||22  0.18\n",
+      "||11  0.18\n",
+      "||18  0.18\n",
+      "||45  0.18\n",
+      "||27  0.18\n",
+      "||25  0.18\n",
+      "||17  0.18\n",
+      "||37  0.12\n",
+      "||38  0.12\n",
+      "||16  0.12\n",
+      "||31  0.12\n",
+      "||15  0.12\n",
+      "||19  0.12\n",
+      "||29  0.12\n",
+      "||28  0.06\n",
+      "||33  0.06\n",
+      "||21  0.06\n",
+      "||39  0.06\n",
+      "||49  0.06\n",
+      "||10  0.06\n",
+      "||26  0.06\n",
+      "||43  0.06\n",
+      "||<br>\n",
+      "||**Media:** 4.264004767580453\n",
+      "||**Mediana:** 3.0\n",
+      "||**Moda:** 4.0\n",
+      "||<br>\n",
+      "||Valores únicos: **38**\n",
       "||Número de registros: **1678**\n",
       "||Valores nulos: **0**\n",
-      "||Registros duplicados: **1624**|\n",
+      "||Registros duplicados: **1640**|\n",
       "---\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "to_doc_headtail(df_raw,'age')\n"
+    "# comprobamos los valores porcentuales e información esencial:\n",
+    "# media, mediana, moda\n",
+    "# número de valores únicos, número de registros, valores nulos, registros duplicados (si la información es relevante)\n",
+    "# la función to_doc imprime información en formato markdown\n",
+    "# si no lo necesitamos, mejor usar transform_info o transform_headtail para comparar\n",
+    "\n",
+    "to_doc_info(df_raw,'environmentsatisfaction')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a0ba31c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "|    dtype: int64  |   environmentsatisfaction   |\n",
+      "|-----------|---------------|\n",
+      "||\n",
+      "||**Top 5:**\n",
+      "||4  28.78%\n",
+      "||3  28.07%\n",
+      "||2  18.83%\n",
+      "||1  18.24%\n",
+      "||12  0.42%\n",
+      "||**Bottom 5:**\n",
+      "||<br>\n",
+      "||39  0.06%\n",
+      "||49  0.06%\n",
+      "||10  0.06%\n",
+      "||26  0.06%\n",
+      "||43  0.06%\n",
+      "||<br>\n",
+      "||**Media:** 4.264004767580453\n",
+      "||**Mediana:** 3.0\n",
+      "||**Moda:** 4.0\n",
+      "||<br>\n",
+      "||Valores únicos: **38**\n",
+      "||Número de registros: **1678**\n",
+      "||Valores nulos: **0**\n",
+      "||Registros duplicados: **1640**|\n",
+      "---\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mismo resultado que la función to_doc_info, salvo que recomendado para gran volumen\n",
+    "# de registros diferentes: muestra los 5 mayores y los 5 menores porcentualmente.\n",
+    "\n",
+    "to_doc_headtail(df_raw, 'environmentsatisfaction')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5de45071",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RAW DATA:\n",
+      "\n",
+      "Valores únicos: 38\n",
+      "Número de registros: 1678\n",
+      "Valores nulos: 0\n",
+      "Registros duplicados: 1640\n",
+      "dtype: int64\n",
+      "----------------\n",
+      "\n",
+      "Porcentajes:\n",
+      "environmentsatisfaction\n",
+      "4     28.78\n",
+      "3     28.07\n",
+      "2     18.83\n",
+      "1     18.24\n",
+      "12     0.42\n",
+      "35     0.42\n",
+      "13     0.36\n",
+      "14     0.36\n",
+      "47     0.30\n",
+      "24     0.30\n",
+      "41     0.24\n",
+      "42     0.24\n",
+      "46     0.24\n",
+      "36     0.24\n",
+      "48     0.24\n",
+      "20     0.18\n",
+      "22     0.18\n",
+      "11     0.18\n",
+      "18     0.18\n",
+      "45     0.18\n",
+      "27     0.18\n",
+      "25     0.18\n",
+      "17     0.18\n",
+      "37     0.12\n",
+      "38     0.12\n",
+      "16     0.12\n",
+      "31     0.12\n",
+      "15     0.12\n",
+      "19     0.12\n",
+      "29     0.12\n",
+      "28     0.06\n",
+      "33     0.06\n",
+      "21     0.06\n",
+      "39     0.06\n",
+      "49     0.06\n",
+      "10     0.06\n",
+      "26     0.06\n",
+      "43     0.06\n",
+      "Name: proportion, dtype: float64\n",
+      "\n",
+      "Estadísticas descriptivas\n",
+      "---------------------------------\n",
+      "Media: 4.26\n",
+      "Mediana: 3.00\n",
+      "Moda: 4.0\n",
+      "----<----<<---<----@\n",
+      "@---->-->-----<-----\n",
+      "TRANSFORMADO:\n",
+      "\n",
+      "Valores únicos: 5\n",
+      "Número de registros: 1614\n",
+      "Valores nulos: 0\n",
+      "Registros duplicados: 1609\n",
+      "dtype: int64\n",
+      "----------------\n",
+      "\n",
+      "Porcentajes:\n",
+      "environmentsatisfaction\n",
+      "4    29.99\n",
+      "3    29.24\n",
+      "2    19.89\n",
+      "1    19.83\n",
+      "5     1.05\n",
+      "Name: proportion, dtype: float64\n",
+      "\n",
+      "Estadísticas descriptivas\n",
+      "---------------------------------\n",
+      "Media: 2.73\n",
+      "Mediana: 3.00\n",
+      "Moda: 4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('RAW DATA:\\n')\n",
+    "transform_info(df_raw,'environmentsatisfaction')\n",
+    "print('----<----<<---<----@')\n",
+    "print('@---->-->-----<-----')\n",
+    "print('TRANSFORMADO:\\n')\n",
+    "transform_info(df_limpio,'environmentsatisfaction')"
    ]
   }
  ],
