--- a/EDA-tercera-y-última.ipynb
+++ b/EDA-tercera-y-última.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "af5a3859",
    "metadata": {},
    "outputs": [
@@ -57,56 +57,20 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|    dtype: int64  |   environmentsatisfaction   |\n",
+      "|    dtype: int64  |   gender   |\n",
       "|-----------|---------------|\n",
       "||\n",
-      "||4  28.78\n",
-      "||3  28.07\n",
-      "||2  18.83\n",
-      "||1  18.24\n",
-      "||12  0.42\n",
-      "||35  0.42\n",
-      "||13  0.36\n",
-      "||14  0.36\n",
-      "||47  0.3\n",
-      "||24  0.3\n",
-      "||41  0.24\n",
-      "||42  0.24\n",
-      "||46  0.24\n",
-      "||36  0.24\n",
-      "||48  0.24\n",
-      "||20  0.18\n",
-      "||22  0.18\n",
-      "||11  0.18\n",
-      "||18  0.18\n",
-      "||45  0.18\n",
-      "||27  0.18\n",
-      "||25  0.18\n",
-      "||17  0.18\n",
-      "||37  0.12\n",
-      "||38  0.12\n",
-      "||16  0.12\n",
-      "||31  0.12\n",
-      "||15  0.12\n",
-      "||19  0.12\n",
-      "||29  0.12\n",
-      "||28  0.06\n",
-      "||33  0.06\n",
-      "||21  0.06\n",
-      "||39  0.06\n",
-      "||49  0.06\n",
-      "||10  0.06\n",
-      "||26  0.06\n",
-      "||43  0.06\n",
+      "||0  60.13\n",
+      "||1  39.87\n",
       "||<br>\n",
-      "||**Media:** 4.264004767580453\n",
-      "||**Mediana:** 3.0\n",
-      "||**Moda:** 4.0\n",
+      "||**Media:** 0.398688915375447\n",
+      "||**Mediana:** 0.0\n",
+      "||**Moda:** 0.0\n",
       "||<br>\n",
-      "||Valores únicos: **38**\n",
+      "||Valores únicos: **2**\n",
       "||Número de registros: **1678**\n",
       "||Valores nulos: **0**\n",
-      "||Registros duplicados: **1640**|\n",
+      "||Registros duplicados: **1676**|\n",
       "---\n",
       "\n"
      ]
@@ -119,7 +83,7 @@
     "# la función to_doc imprime información en formato markdown\n",
     "# si no lo necesitamos, mejor usar transform_info o transform_headtail para comparar\n",
     "\n",
-    "to_doc_info(df_raw,'environmentsatisfaction')\n"
+    "to_doc_info(df_raw,'gender')\n"
    ]
   },
   {
