--- a/EDA-tercera-y-última.ipynb
+++ b/EDA-tercera-y-última.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "b1ed29ba",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "id": "40c9a0ce",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "id": "af5a3859",
    "metadata": {},
    "outputs": [
@@ -57,20 +57,23 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|    dtype: int64  |   gender   |\n",
+      "|    dtype: object  |   remotework   |\n",
       "|-----------|---------------|\n",
       "||\n",
-      "||0  60.13\n",
-      "||1  39.87\n",
+      "||1  22.35\n",
+      "||True  21.57\n",
+      "||False  18.95\n",
+      "||0  18.95\n",
+      "||Yes  18.18\n",
       "||<br>\n",
-      "||**Media:** 0.398688915375447\n",
-      "||**Mediana:** 0.0\n",
-      "||**Moda:** 0.0\n",
+      "||**Media:** 0.5411255411255411\n",
+      "||**Mediana:** 1.0\n",
+      "||**Moda:** 1.0\n",
       "||<br>\n",
-      "||Valores únicos: **2**\n",
+      "||Valores únicos: **5**\n",
       "||Número de registros: **1678**\n",
       "||Valores nulos: **0**\n",
-      "||Registros duplicados: **1676**|\n",
+      "||Registros duplicados: **1673**|\n",
       "---\n",
       "\n"
      ]
@@ -83,12 +86,12 @@
     "# la función to_doc imprime información en formato markdown\n",
     "# si no lo necesitamos, mejor usar transform_info o transform_headtail para comparar\n",
     "\n",
-    "to_doc_info(df_raw,'gender')\n"
+    "to_doc_info(df_raw,'remotework')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "id": "a0ba31c0",
    "metadata": {},
    "outputs": [
@@ -97,31 +100,31 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|    dtype: int64  |   environmentsatisfaction   |\n",
+      "|    dtype: object  |   roledepartament   |\n",
       "|-----------|---------------|\n",
       "||\n",
       "||**Top 5:**\n",
-      "||4  28.78%\n",
-      "||3  28.07%\n",
-      "||2  18.83%\n",
-      "||1  18.24%\n",
-      "||12  0.42%\n",
+      "||nan  81.41%\n",
+      "|| Sales exECutIVE  -  Sales   0.12%\n",
+      "|| humAN resoURCEs  -  Human Resources   0.12%\n",
+      "|| labORAtoRy tEcHNICIAN  -  Research & Development   0.12%\n",
+      "|| hEalthCaRe reprEseNTaTiVe  -  Research & Development   0.12%\n",
       "||**Bottom 5:**\n",
       "||<br>\n",
-      "||39  0.06%\n",
-      "||49  0.06%\n",
-      "||10  0.06%\n",
-      "||26  0.06%\n",
-      "||43  0.06%\n",
+      "|| RESEArCH sCIenTIst  -  Research & Development   0.06%\n",
+      "|| hUMAn reSoUrCES  -  Human Resources   0.06%\n",
+      "|| HUmAN rESOuRceS  -  Human Resources   0.06%\n",
+      "|| SALEs REpRESentatIve  -  Sales   0.06%\n",
+      "|| heaLtHcArE repResENtATiVe  -  Research & Development   0.06%\n",
       "||<br>\n",
-      "||**Media:** 4.264004767580453\n",
-      "||**Mediana:** 3.0\n",
-      "||**Moda:** 4.0\n",
+      "||**Media:** nan\n",
+      "||**Mediana:** nan\n",
+      "||**Moda:** nan\n",
       "||<br>\n",
-      "||Valores únicos: **38**\n",
+      "||Valores únicos: **301**\n",
       "||Número de registros: **1678**\n",
-      "||Valores nulos: **0**\n",
-      "||Registros duplicados: **1640**|\n",
+      "||Valores nulos: **1366**\n",
+      "||Registros duplicados: **1377**|\n",
       "---\n",
       "\n"
      ]
@@ -131,12 +134,97 @@
     "# mismo resultado que la función to_doc_info, salvo que recomendado para gran volumen\n",
     "# de registros diferentes: muestra los 5 mayores y los 5 menores porcentualmente.\n",
     "\n",
-    "to_doc_headtail(df_raw, 'environmentsatisfaction')"
+    "to_doc_headtail(df_raw, 'roledepartament')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "f4e5b1f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('COLUMNA COMPARADA 1:\\n')\n",
+    "transform_info(df_raw,'remotework')\n",
+    "print('----<----<<---<----@')\n",
+    "print('@---->-->-----<-----')\n",
+    "print('COLUMNA COMPARADA 2:\\n')\n",
+    "transform_info(df_limpio, 'remotework')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a684c210",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COLUMNA COMPARADA 1:\n",
+      "\n",
+      "Valores únicos: 5\n",
+      "Número de registros: 1678\n",
+      "Valores nulos: 0\n",
+      "Registros duplicados: 1673\n",
+      "dtype: object\n",
+      "----------------\n",
+      "\n",
+      "Porcentajes:\n",
+      "remotework\n",
+      "1        22.35\n",
+      "True     21.57\n",
+      "False    18.95\n",
+      "0        18.95\n",
+      "Yes      18.18\n",
+      "Name: proportion, dtype: float64\n",
+      "\n",
+      "Estadísticas descriptivas\n",
+      "---------------------------------\n",
+      "Media: 0.54\n",
+      "Mediana: 1.00\n",
+      "Moda: 1.0\n",
+      "----<----<<---<----@\n",
+      "@---->-->-----<-----\n",
+      "COLUMNA COMPARADA 2:\n",
+      "\n",
+      "Valores únicos: 2\n",
+      "Número de registros: 1614\n",
+      "Valores nulos: 945\n",
+      "Registros duplicados: 1612\n",
+      "dtype: object\n",
+      "----------------\n",
+      "\n",
+      "Porcentajes:\n",
+      "remotework\n",
+      "NaN    58.55\n",
+      "yes    22.30\n",
+      "no     19.14\n",
+      "Name: proportion, dtype: float64\n",
+      "\n",
+      "Estadísticas descriptivas\n",
+      "---------------------------------\n",
+      "Media: nan\n",
+      "Mediana: nan\n",
+      "Moda: nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "# DEJO LA COMPARACIÓN PORQUE PUEDE HABER UNA IMPRECISIÓN EN LA TRANSFORMACIÓN \n",
+    "\n",
+    "print('COLUMNA COMPARADA 1:\\n')\n",
+    "transform_info(df_raw,'remotework')\n",
+    "print('----<----<<---<----@')\n",
+    "print('@---->-->-----<-----')\n",
+    "print('COLUMNA COMPARADA 2:\\n')\n",
+    "transform_info(df_limpio, 'remotework')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "5de45071",
    "metadata": {},
    "outputs": [
@@ -146,95 +234,74 @@
      "text": [
       "RAW DATA:\n",
       "\n",
-      "Valores únicos: 38\n",
+      "Valores únicos: 493\n",
       "Número de registros: 1678\n",
-      "Valores nulos: 0\n",
-      "Registros duplicados: 1640\n",
-      "dtype: int64\n",
+      "Valores nulos: 489\n",
+      "Registros duplicados: 1185\n",
+      "dtype: object\n",
       "----------------\n",
       "\n",
       "Porcentajes:\n",
-      "environmentsatisfaction\n",
-      "4     28.78\n",
-      "3     28.07\n",
-      "2     18.83\n",
-      "1     18.24\n",
-      "12     0.42\n",
-      "35     0.42\n",
-      "13     0.36\n",
-      "14     0.36\n",
-      "47     0.30\n",
-      "24     0.30\n",
-      "41     0.24\n",
-      "42     0.24\n",
-      "46     0.24\n",
-      "36     0.24\n",
-      "48     0.24\n",
-      "20     0.18\n",
-      "22     0.18\n",
-      "11     0.18\n",
-      "18     0.18\n",
-      "45     0.18\n",
-      "27     0.18\n",
-      "25     0.18\n",
-      "17     0.18\n",
-      "37     0.12\n",
-      "38     0.12\n",
-      "16     0.12\n",
-      "31     0.12\n",
-      "15     0.12\n",
-      "19     0.12\n",
-      "29     0.12\n",
-      "28     0.06\n",
-      "33     0.06\n",
-      "21     0.06\n",
-      "39     0.06\n",
-      "49     0.06\n",
-      "10     0.06\n",
-      "26     0.06\n",
-      "43     0.06\n",
-      "Name: proportion, dtype: float64\n",
+      "sameasmonthlyincome\n",
+      "NaN          29.14\n",
+      "2342,59$     13.59\n",
+      "4492,84$     13.53\n",
+      "8339,32$      6.26\n",
+      "12783,92$     2.50\n",
+      "             ...  \n",
+      "1980,00$      0.06\n",
+      "2115,83$      0.06\n",
+      "1923,33$      0.06\n",
+      "2241,67$      0.06\n",
+      "15034,17$     0.06\n",
+      "Name: proportion, Length: 494, dtype: float64\n",
       "\n",
       "Estadísticas descriptivas\n",
       "---------------------------------\n",
-      "Media: 4.26\n",
-      "Mediana: 3.00\n",
-      "Moda: 4.0\n",
+      "Media: nan\n",
+      "Mediana: nan\n",
+      "Moda: nan\n",
       "----<----<<---<----@\n",
       "@---->-->-----<-----\n",
       "TRANSFORMADO:\n",
       "\n",
-      "Valores únicos: 5\n",
+      "Valores únicos: 715\n",
       "Número de registros: 1614\n",
       "Valores nulos: 0\n",
-      "Registros duplicados: 1609\n",
-      "dtype: int64\n",
+      "Registros duplicados: 899\n",
+      "dtype: float64\n",
       "----------------\n",
       "\n",
       "Porcentajes:\n",
-      "environmentsatisfaction\n",
-      "4    29.99\n",
-      "3    29.24\n",
-      "2    19.89\n",
-      "1    19.83\n",
-      "5     1.05\n",
-      "Name: proportion, dtype: float64\n",
+      "monthlyincome\n",
+      "4492.840000     13.88\n",
+      "2342.590000     13.57\n",
+      "8339.320000      8.61\n",
+      "4492.842500      5.76\n",
+      "2342.594167      4.71\n",
+      "                ...  \n",
+      "1811.670000      0.06\n",
+      "2119.170000      0.06\n",
+      "5448.333333      0.06\n",
+      "1848.330000      0.06\n",
+      "16026.666667     0.06\n",
+      "Name: proportion, Length: 715, dtype: float64\n",
       "\n",
       "Estadísticas descriptivas\n",
       "---------------------------------\n",
-      "Media: 2.73\n",
-      "Mediana: 3.00\n",
-      "Moda: 4.0\n"
+      "Media: 5628.76\n",
+      "Mediana: 4492.84\n",
+      "Moda: 4492.84\n"
      ]
     }
    ],
    "source": [
     "print('RAW DATA:\\n')\n",
-    "transform_info(df_raw,'environmentsatisfaction')\n",
+    "transform_info(df_raw,'sameasmonthlyincome')\n",
     "print('----<----<<---<----@')\n",
     "print('@---->-->-----<-----')\n",
     "print('TRANSFORMADO:\\n')\n",
-    "transform_info(df_limpio,'environmentsatisfaction')"
+    "transform_info(df_limpio,'monthlyincome')"
    ]
   }
  ],
