--- a/Transformación.ipynb
+++ b/Transformación.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "81526617",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9cad08e1",
    "metadata": {},
    "outputs": [],
@@ -1195,193 +1195,193 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1455</th>\n",
-       "      <td>sales</td>\n",
-       "      <td>sales representative</td>\n",
-       "      <td>sales representative  -  sales</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>421</th>\n",
+       "      <th>1342</th>\n",
        "      <td>research &amp; development</td>\n",
        "      <td>laboratory technician</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>304</th>\n",
-       "      <td>sales</td>\n",
-       "      <td>sales executive</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1642</th>\n",
-       "      <td>sales</td>\n",
-       "      <td>sales executive</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1075</th>\n",
+       "      <th>164</th>\n",
        "      <td>research &amp; development</td>\n",
        "      <td>research scientist</td>\n",
-       "      <td>research scientist  -  research &amp; development</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1406</th>\n",
-       "      <td>research &amp; development</td>\n",
-       "      <td>laboratory technician</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1608</th>\n",
+       "      <th>1330</th>\n",
        "      <td>research &amp; development</td>\n",
-       "      <td>manufacturing director</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>636</th>\n",
-       "      <td>sales</td>\n",
-       "      <td>sales executive</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1400</th>\n",
-       "      <td>research &amp; development</td>\n",
-       "      <td>laboratory technician</td>\n",
+       "      <td>research scientist</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1351</th>\n",
-       "      <td>sales</td>\n",
-       "      <td>sales executive</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>464</th>\n",
-       "      <td>sales</td>\n",
-       "      <td>sales executive</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>151</th>\n",
+       "      <th>1587</th>\n",
        "      <td>NaN</td>\n",
        "      <td>manager</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>310</th>\n",
+       "      <th>1627</th>\n",
        "      <td>research &amp; development</td>\n",
        "      <td>laboratory technician</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1274</th>\n",
+       "      <th>760</th>\n",
+       "      <td>research &amp; development</td>\n",
+       "      <td>laboratory technician</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
        "      <td>sales</td>\n",
        "      <td>sales executive</td>\n",
+       "      <td>sales executive  -  sales</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1060</th>\n",
+       "      <td>research &amp; development</td>\n",
+       "      <td>research scientist</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>554</th>\n",
+       "      <td>research &amp; development</td>\n",
+       "      <td>research scientist</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>502</th>\n",
+       "      <th>141</th>\n",
        "      <td>research &amp; development</td>\n",
-       "      <td>manufacturing director</td>\n",
+       "      <td>healthcare representative</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>272</th>\n",
+       "      <td>research &amp; development</td>\n",
+       "      <td>laboratory technician</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>sales</td>\n",
+       "      <td>sales executive</td>\n",
+       "      <td>sales executive  -  sales</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>520</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>manager</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>970</th>\n",
+       "      <td>research &amp; development</td>\n",
+       "      <td>research scientist</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1219</th>\n",
+       "      <td>human resources</td>\n",
+       "      <td>human resources</td>\n",
+       "      <td>human resources  -  human resources</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1255</th>\n",
+       "      <td>research &amp; development</td>\n",
+       "      <td>laboratory technician</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>404</th>\n",
+       "      <td>research &amp; development</td>\n",
+       "      <td>research director</td>\n",
        "      <td>NaN</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1289</th>\n",
-       "      <td>research &amp; development</td>\n",
-       "      <td>manufacturing director</td>\n",
-       "      <td>manufacturing director  -  research &amp; develop...</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1201</th>\n",
-       "      <td>research &amp; development</td>\n",
-       "      <td>research scientist</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1220</th>\n",
-       "      <td>research &amp; development</td>\n",
-       "      <td>research scientist</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>research &amp; development</td>\n",
-       "      <td>research director</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>320</th>\n",
+       "      <td>sales</td>\n",
+       "      <td>sales executive</td>\n",
+       "      <td>sales executive  -  sales</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1357</th>\n",
-       "      <td>sales</td>\n",
-       "      <td>sales executive</td>\n",
+       "      <th>1229</th>\n",
+       "      <td>research &amp; development</td>\n",
+       "      <td>laboratory technician</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>335</th>\n",
+       "      <td>research &amp; development</td>\n",
+       "      <td>research scientist</td>\n",
+       "      <td>research scientist  -  research &amp; development</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  department                 jobrole  \\\n",
-       "1455                   sales    sales representative   \n",
-       "421   research & development   laboratory technician   \n",
-       "304                    sales         sales executive   \n",
-       "1642                   sales         sales executive   \n",
-       "1075  research & development      research scientist   \n",
-       "1406  research & development   laboratory technician   \n",
-       "1608  research & development  manufacturing director   \n",
-       "636                    sales         sales executive   \n",
-       "1400  research & development   laboratory technician   \n",
-       "1351                   sales         sales executive   \n",
-       "464                    sales         sales executive   \n",
-       "151                      NaN                 manager   \n",
-       "310   research & development   laboratory technician   \n",
-       "1274                   sales         sales executive   \n",
-       "502   research & development  manufacturing director   \n",
-       "1289  research & development  manufacturing director   \n",
-       "1201  research & development      research scientist   \n",
-       "1220  research & development      research scientist   \n",
-       "12    research & development       research director   \n",
-       "1357                   sales         sales executive   \n",
+       "                  department                    jobrole  \\\n",
+       "1342  research & development      laboratory technician   \n",
+       "164   research & development         research scientist   \n",
+       "1330  research & development         research scientist   \n",
+       "1587                     NaN                    manager   \n",
+       "1627  research & development      laboratory technician   \n",
+       "760   research & development      laboratory technician   \n",
+       "66                     sales            sales executive   \n",
+       "1060  research & development         research scientist   \n",
+       "554   research & development         research scientist   \n",
+       "141   research & development  healthcare representative   \n",
+       "272   research & development      laboratory technician   \n",
+       "30                     sales            sales executive   \n",
+       "520                      NaN                    manager   \n",
+       "970   research & development         research scientist   \n",
+       "1219         human resources            human resources   \n",
+       "1255  research & development      laboratory technician   \n",
+       "404   research & development          research director   \n",
+       "320                    sales            sales executive   \n",
+       "1229  research & development      laboratory technician   \n",
+       "335   research & development         research scientist   \n",
        "\n",
-       "                                        roledepartament  joblevel  \n",
-       "1455                    sales representative  -  sales          1  \n",
-       "421                                                 NaN         1  \n",
-       "304                                                 NaN         2  \n",
-       "1642                                                NaN         2  \n",
-       "1075     research scientist  -  research & development          2  \n",
-       "1406                                                NaN         1  \n",
-       "1608                                                NaN         2  \n",
-       "636                                                 NaN         2  \n",
-       "1400                                                NaN         1  \n",
-       "1351                                                NaN         2  \n",
-       "464                                                 NaN         3  \n",
-       "151                                                 NaN         4  \n",
-       "310                                                 NaN         1  \n",
-       "1274                                                NaN         2  \n",
-       "502                                                 NaN         4  \n",
-       "1289   manufacturing director  -  research & develop...         2  \n",
-       "1201                                                NaN         2  \n",
-       "1220                                                NaN         2  \n",
-       "12                                                  NaN         3  \n",
-       "1357                                                NaN         2  "
+       "                                      roledepartament  joblevel  \n",
+       "1342                                              NaN         1  \n",
+       "164                                               NaN         1  \n",
+       "1330                                              NaN         1  \n",
+       "1587                                              NaN         5  \n",
+       "1627                                              NaN         1  \n",
+       "760                                               NaN         1  \n",
+       "66                         sales executive  -  sales          4  \n",
+       "1060                                              NaN         1  \n",
+       "554                                               NaN         2  \n",
+       "141                                               NaN         2  \n",
+       "272                                               NaN         2  \n",
+       "30                         sales executive  -  sales          3  \n",
+       "520                                               NaN         5  \n",
+       "970                                               NaN         1  \n",
+       "1219             human resources  -  human resources          1  \n",
+       "1255                                              NaN         1  \n",
+       "404                                               NaN         4  \n",
+       "320                        sales executive  -  sales          3  \n",
+       "1229                                              NaN         1  \n",
+       "335    research scientist  -  research & development          1  "
       ]
      },
      "execution_count": 21,
@@ -1745,10 +1745,10 @@
     "# Diccionario de mapeo para los cambios\n",
     "mapping = {\n",
     "    '1': \"yes\",\n",
-    "    'True': \"yes\",\n",
+    "    'true': \"yes\",\n",
     "    '0': \"no\",\n",
-    "    'False': \"no\",\n",
-    "    \"Yes\": \"yes\"\n",
+    "    'false': \"no\",\n",
+    "    \"yes\": \"yes\"\n",
     "}\n",
     "\n",
     "# Aplicarlo a la columna\n",
@@ -1917,7 +1917,7 @@
        "      <td>15</td>\n",
        "      <td>1972</td>\n",
        "      <td>195370.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1995,7 +1995,7 @@
        "1              3.0              33                       11   \n",
        "\n",
        "   yearswithcurrmanager  datebirth    salary remotework  \n",
-       "0                    15       1972  195370.0        NaN  \n",
+       "0                    15       1972  195370.0        yes  \n",
        "1                     9       1971  199990.0        yes  "
       ]
      },
@@ -2285,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "514d76f4",
    "metadata": {},
    "outputs": [],
@@ -2319,7 +2319,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2333,7 +2333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
