Small update en Visualizaciones

--- a/visualizaciones.ipynb
+++ b/visualizaciones.ipynb
@@ -433,7 +433,7 @@
    "id": "4a9ac5e7",
    "metadata": {},
    "source": [
-    "1. Distribución de Atrición ('attrition')"
+    "### 1. Distribución de Atrición ('attrition')"
    ]
   },
   {
@@ -540,7 +540,7 @@
    "id": "57b425d0",
    "metadata": {},
    "source": [
-    "### - Atrición por departamento: "
+    "### 2. Atrición por departamento: "
    ]
   },
   {
@@ -618,7 +618,7 @@
    "id": "691dd0a2",
    "metadata": {},
    "source": [
-    "### - Tasa de Rotación por Rol de Trabajo: "
+    "### 3. Tasa de Rotación por Rol de Trabajo: "
    ]
   },
   {
@@ -787,7 +787,7 @@
    "id": "987a9861",
    "metadata": {},
    "source": [
-    "### - Rotación (Attrition) en empleados con y sin trabajo remoto:"
+    "### 4. Rotación en empleados con y sin trabajo remoto:"
    ]
   },
   {
@@ -845,7 +845,7 @@
    "id": "b88bb4d4",
    "metadata": {},
    "source": [
-    "### - Atrición por Antigüedad en la Empresa:"
+    "### 5. Atrición por Antigüedad en la Empresa:"
    ]
   },
   {
@@ -1031,7 +1031,7 @@
    "id": "59300a04",
    "metadata": {},
    "source": [
-    "2. Ingreso Mensual ('monthlyincome') por Departamento ('department')"
+    "### 6. Ingreso Mensual ('monthlyincome') por Departamento ('department')"
    ]
   },
   {
@@ -1200,7 +1200,7 @@
    "id": "db17ca2b",
    "metadata": {},
    "source": [
-    "3. Antigüedad en la Empresa ('yearsatcompany')"
+    "### 7. Antigüedad en la Empresa ('yearsatcompany')"
    ]
   },
   {
@@ -1283,29 +1283,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "841f7553",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# los que mas cobran son los que mas tiempo llevan? \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5a43d379",
-   "metadata": {},
-   "source": [
-    "____"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "343895cd",
    "metadata": {},
    "source": [
-    "### - Salario vs Antigüedad:"
+    "### 8. Salario vs Antigüedad:"
    ]
   },
   {
@@ -2188,7 +2170,7 @@
    "id": "2a979576",
    "metadata": {},
    "source": [
-    "### - Attrition vs Jobsatisfaction:"
+    "### 9. Attrition vs Jobsatisfaction:"
    ]
   },
   {
@@ -2253,7 +2235,7 @@
    "id": "6c880fec",
    "metadata": {},
    "source": [
-    "### - Ingreso mensual vs rotación"
+    "### 10. Ingreso mensual vs rotación"
    ]
   },
   {
@@ -2337,7 +2319,7 @@
    "id": "f50c791a",
    "metadata": {},
    "source": [
-    "### - jobsatisfaction vs attrition vs worklifebalance"
+    "### 11. Frecuencia de rotación por satisfacción y equilibrio"
    ]
   },
   {
@@ -2399,7 +2381,7 @@
    "id": "c08a5310",
    "metadata": {},
    "source": [
-    "### - Performancerating vs percentsalaryhike"
+    "### 12. Relación entre Evaluación de Desempeño y Aumento Salarial"
    ]
   },
   {
@@ -2586,10 +2568,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2e9d7e96",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5dc89bec",
    "metadata": {},
    "source": [
-    "### - performancerating vs yearsatcompany vs percentsalaryhike"
+    "### 13. Aumento Salarial por Desempeño y Antigüedad"
    ]
   },
   {
@@ -2699,7 +2689,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2713,7 +2703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.14.1"
   }
  },
  "nbformat": 4,
